Pushing v219 from API 5784026146b645e1eaf314745253a613332ad4f6

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -22479,6 +22479,9 @@ components:
         - availability.created
         - availability.updated
         - availability.deleted
+        - care_plan.created
+        - care_plan.updated
+        - care_plan.deleted
         - care_team.created
         - care_team.updated
         - care_team.deleted
