Pushing v221 from API 0c121f4b6942233ed97ace5d21140f40fbd1af6a

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -10596,6 +10596,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/note_version"
+      x-methodName: retrieveVersion
+      x-belongsToResource: note
   "/v1/notes/{id}/versions":
     get:
       summary: List all Note Versions
@@ -10687,6 +10689,8 @@ paths:
                   - object
                   - data
                   - has_more
+      x-methodName: listVersions
+      x-belongsToResource: note
   /v1/orders:
     post:
       summary: Create an Order
