Pushing v226 from API 5f5ec29c4da531270de924d73e2cdeb8ebe9ca2d

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -10177,6 +10177,9 @@ paths:
             schema:
               type: object
               properties:
+                encounter:
+                  type: string
+                  description: The encounter to which this note belongs
                 member:
                   type: string
                   example: mem_5QW8j1oKqQjNaPk4Hv3f
@@ -10197,6 +10200,7 @@ paths:
                   example: note_8pitvSre35TyAyhSVIzA
                   description: Identifier of the note you wish to supersede.
               required:
+                - encounter
                 - member
       responses:
         default:
@@ -23224,6 +23228,9 @@ components:
         - device.activated
         - device.deactivated
         - device.deleted
+        - encounter.created
+        - encounter.updated
+        - encounter.deleted
         - file.created
         - field.created
         - field.updated
